--- a/AuthenticationWithJWT/package.json
+++ b/AuthenticationWithJWT/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Day5Authentication",
+  "name": "authenticationwithjwt",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
